versioned_docs/version-1.13/samples/ruby.mdx
---
title: Getting Started with Okteto and Ruby
description: This tutorial will show you how to develop and debug a Ruby application using Okteto
sidebar_label: Ruby
id: ruby
---

import Image from "@theme/Image";

[Okteto Cloud](https://example.okteto.com/#/?origin=docs) gives instant access to secure Kubernetes namespaces to enable developers to code, build, and run Kubernetes applications entirely in the cloud.

This tutorial will show you how to develop and debug a Ruby application using Okteto.

## Prerequisites

- Install the latest version of the Okteto CLI. Follow this [guide](cloud/okteto-cli.mdx) if you haven't done it yet.
- Configure Access to your Okteto Cloud Namespace [using the Okteto CLI](cloud/credentials.mdx#download-your-kubernetes-credentials-using-the-okteto-cli) or [using the Okteto UI](cloud/credentials.mdx#download-your-kubernetes-credentials-using-the-okteto-cli).

## Step 1: Deploy the Ruby Sample App

Get a local version of the Ruby Sample App by executing the following commands:

```console
$ git clone https://github.com/okteto/ruby-getting-started
$ cd ruby-getting-started
```

At the root of the directory, you'll find the `okteto.yaml` file. This describes how to [build](reference/manifest.mdx#build-object-optional) and [deploy](reference/manifest.mdx#deploy-string-optional) the Python Sample App.

```
build:
  hello-world:
    image: okteto.dev/ruby-hello-world:1.0.0
    context: .
deploy:
  - kubectl apply -f k8s.yml
```

Deploy your development environment by executing:

```console
$ okteto deploy --build
```

```console
 i  Using cindy @ example.okteto.com as context
 i  Building image for service 'hello-world'
 i  Building the image 'okteto.dev/ruby-hello-world:1.0.0' in tcp://buildkit.example.okteto.com:1234...
[+] Building 5.9s (11/11) FINISHED
 ...
 ✓  Image 'registry.example.okteto.com/cindy/ruby-hello-world:1.0.0' successfully pushed
 i  Running kubectl apply -f k8s.yml
deployment.apps/hello-world created
service/hello-world created
ingress.networking.k8s.io/hello-world created
 ✓  Development environment 'ruby-getting-started' successfully deployed
 i  Run 'okteto up' to activate your development container
```

Log into your Okteto instance and click on the URL of the application:

<Image
  src={require("@site/static/img/okteto-ui.png").default}
  alt="Okteto UI Ruby"
  width="850"
/>

Did you notice that you're accessing your application through an HTTPs endpoint? This is because Okteto will [automatically create them](cloud/ssl.mdx) for you when you deploy your application. Cool no 😎?

## Step 2: Activate your development container

The [dev](reference/manifest.mdx#dev-object-optional) section defines how to activate a development container for the Ruby Sample App:

```
dev:
  hello-world:
    command: bash
    sync:
      - .:/opt/app/
    forward:
      - 1234:1234
    volumes:
      - /usr/local/bundle/cache
```

The `hello-world` key matches the name of the hello world Deployment. The meaning of the rest of fields is:

- `command`: the start command of the development container.
- `sync`: the folders that will be synchronized between your local machine and the development container.
- `forward`: a list of ports to forward from your development container to localhost in your machine. This is needed to configure the Ruby debugger.
- `volumes`: a list of paths in your development container to be mounted as persistent volumes. For example, this is useful to persist the bundle cache.

Also, note that there is a `.stignore` file to indicate which files shouldn't be synchronized to your development container.
This is useful to avoid synchronizing binaries, build artifacts or git metadata.

Next, execute the following command to activate your development container:

```console
$ okteto up
```

```console
 ✓  Persistent volume successfully attached
 ✓  Images successfully pulled
 ✓  Files synchronized
    Namespace: cindy
    Name:      hello-world
    Forward:   1234 -> 1234

Welcome to your development container. Happy coding!
cindy:hello-world app>
```

Working in your development container is the same as working on your local machine.
Start the application in hot-reload mode by running the following command:

```console
cindy:hello-world app> ruby app.rb
```

```console
[2022-07-04 16:50:53] INFO  WEBrick 1.6.1
[2022-07-04 16:50:53] INFO  ruby 2.7.6 (2022-04-12) [x86_64-linux]
== Sinatra (v2.0.8.1) has taken the stage on 8080 for production with backup from WEBrick
[2022-07-04 16:50:53] INFO  WEBrick::HTTPServer#start: pid=79 port=8080
```

Go back to the browser and reload the page to test that your application is running.

## Step 3: Develop directly in Okteto Cloud

Open the `app.rb` file in your favorite local IDE and modify the response message on line 7 to be _Hello world from the cluster!_. Save your changes.

```ruby
get "/" do
  message = "Hello world from the cluster!"
  message
end
```

Okteto will synchronize your changes to your development container in Kubernetes and Sinatra automatically detects them and reloads your application.

Go back to the browser and reload the page. Your code changes were instantly applied. No commit, build, or push required 😎!

## Step 4: Remote debugging with Okteto

Okteto enables you to debug your applications directly from your favorite IDE. Let's take a look at how that works in VS Code, one of the most popular IDEs for Ruby development. If you haven't done it yet, install the [Ruby extension](https://marketplace.visualstudio.com/items?itemName=rebornix.Ruby) available from Visual Studio marketplace. This extension comes with debug definitions covering the default `ruby-debug-ide` client setup.

Now, cancel the execution of `ruby app.rb` from the development container shell by pressing `ctrl + c`. Rerun your application in debug mode:

```console
cindy:hello-world app> rdebug-ide --host 0.0.0.0 app.rb
```

```console
Fast Debugger (ruby-debug-ide 0.7.0, debase 0.2.4.1, file filtering is supported) listens on 0.0.0.0:1234
```

Open the _Run_ view in VS Code and run the _Connect to okteto_ debug configuration (or press the F5 shortcut):

```json
{
  "version": "0.2.0",
  "configurations": [
    {
      "name": "Connect to okteto",
      "type": "Ruby",
      "request": "attach",
      "remotePort": "1234",
      "remoteHost": "localhost",
      "remoteWorkspaceRoot": "/opt/app",
      "cwd": "${workspaceRoot}"
    }
  ]
}
```

> You should be replacing the value of `remoteWorkspaceRoot` with wherever your application code is.

Add a breakpoint on `app.rb`, line 8. Go back to the browser and reload the page. The execution will halt at your breakpoint. You can then inspect the request, the available variables, etc...

<Image
  src={require("@site/static/img/ruby-halt.png").default}
  alt="debugging in Okteto with Ruby"
  width="850"
/>

Your code is executing in Okteto, but you can debug it from your local machine without any extra services or tools. Pretty cool no? 😉

## Next steps

Congratulations, you just developed **your first application in Okteto** 🚀.

> Okteto lets you develop your applications directly in Kubernetes. This way you can:
>
> - Eliminate integration issues by developing in a realistic environment
> - Test your application end to end as fast as you type code
> - No more CPU cycles wasted in your machine. Develop at the speed of the cloud!

Find more advanced samples with Okteto in [this repository](https://github.com/okteto/samples) or [join our community](https://community.okteto.com) to ask questions and share your feedback.
